binrw/tests/ui/invalid_assert_condition.stderr
error[E0308]: mismatched types
 --> tests/ui/invalid_assert_condition.rs:4:13
  |
 4 | #[br(assert("wrong type"))]
   |      ------ ^^^^^^^^^^^^ expected `bool`, found `&str`
   |      |
   |      arguments to this function are incorrect
   |
note: function defined here
  --> src/private.rs
   |
   | pub fn assert<MsgFn, Msg, ErrorFn, Err>(
   |        ^^^^^^
